Full functional and tested Java wrapper for Qt 5.15