@@ -32,6 +32,7 @@ package io.qt.autotests;
 
 import java.lang.ref.WeakReference;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -109,7 +110,7 @@ public abstract class QApplicationTest {
 			if(QCoreApplication.instance()==null) {
 				Utils.println(2, "QApplicationTest.testInitialize(): begin");
 			    io.qt.QtResources.addSearchPath(".");
-			    QCoreApplication.setLibraryPaths(List.of(QtJambiInternal.qtPrefix()+"/plugins"));
+			    QCoreApplication.setLibraryPaths(Arrays.asList(QtJambiInternal.qtPrefix()+"/plugins"));
 			    QCoreApplication.setApplicationName("QtJambiUnitTest");
 			    QApplication.initialize(new String[]{"arg1", "arg2", "arg3"});
 			    Utils.println(2, "QApplicationTest.testInitialize(): done");
